<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/white" >

    <RelativeLayout
        android:id="@+id/layout_sms_settings_top"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/title_background"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/sms_settings_back"
            android:layout_width="55dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/sms_detail_btn_back"
            android:onClick="smsListBack"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sms_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:text="@string/sms_setting_about"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
	            android:id="@+id/sms_contact_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_us"
	            android:textSize="20sp" />
            
            <TextView
	            android:id="@+id/sms_contact_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:text="@string/sms_setting_about_us_content" />
            
            <TextView
	            android:id="@+id/sms_contact_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_contact"
	            android:textSize="20sp" />
            
            <TextView
	            android:id="@+id/sms_about_contact_content"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:autoLink="all" />
            
            <TextView
	            android:id="@+id/sms_contact_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="15dip"
	            android:textColor="@color/blue"
	            android:text="@string/sms_setting_about_cooperation"
	            android:textSize="20sp" />

            <TextView
	            android:id="@+id/setting_about_cooperation_id"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
	            android:textColor="@color/black"
	            android:autoLink="all"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>