<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/white" >

    <RelativeLayout
        android:id="@+id/layout_sms_settings_top"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/title_background"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/sms_settings_back"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/sms_detail_btn_back"
            android:onClick="smsListBack"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sms_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:text="@string/sms_setting_suggestion"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="15dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/suggestion_content"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/edittext_default"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="16"
                    android:maxLines="3" />
                
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <Button
                    android:id="@+id/suggestion_commit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:background="@color/red"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:text="@string/sms_setting_suggestion_commit"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <LinearLayout
                    android:id="@+id/reg_phone_layout_note"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/suggestion_commit"
                    android:orientation="vertical"
                    android:paddingBottom="50dip" >

                    <com.android.audiorecorder.myview.HandyTextView
                        android:id="@+id/reg_phone_htv_note"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:layout_marginRight="8dip"
                        android:layout_marginTop="8dip"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/sms_setting_suggestion_notice"
                        android:textColor="@color/notes_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>